@@ -1,6 +1,6 @@
 Package: effects
 Version: 4.0-0
-Date: 2017-08-30
+Date: 2017-09-01
 Title: Effect Displays for Linear, Generalized Linear, and Other Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
